--- a/src/App.css
+++ b/src/App.css
@@ -2,7 +2,7 @@
   margin: 0;
 }
 body{
-  background-color: silver;
+  background-color: #F3F3F4;
 }
 .center{
   display: flex;
@@ -70,4 +70,21 @@ body{
 #tableSec{
   display: flex;
   justify-content: center;
+}
+
+#rfpdetailtools{
+  padding: 10px 0px;
+  justify-content: space-between;
+  width: 95vw;
+}
+
+.rfpdetailtoolsbuttons{
+  margin: 0px 10px;
+}
+
+#rfpdetailbottom{
+  width: 95vw;
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
 }
